<resources xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<string name="android">en</string>
	<string name="app_name">STARTEK</string>
	<string name="common_transmitting">Communication...</string>
	<string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
	<string name="error">Error</string>
	<string name="no_nfc">No NFC found on this device</string>
	<string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
	<string name="button_setting">Setting</string>
	<string name="label_employee_id">Employee ID</string>
	<string name="label_dept">DEPT</string>
	<string name="label_name_and_dept">Name / Dept</string>
	<string name="label_teamstatus">Team Status</string>
	<string name="label_reminder">Reminder</string>
	<string name="label_announcement">Announcement</string>
	<string name="header_reminder_1">Subject</string>
	<string name="header_reminder_2">tricker</string>
	<string name="header_reminder_3">Time</string>
	<string name="header_announcement_1">Subject</string>
	<string name="header_announcement_2">Announcer</string>
	<string name="header_announcement_3">Time</string>
	<string name="buttonDevice">Access Control</string>
	<string name="buttonUserManager">User Manager</string>
	<string name="buttonLogging">Logging</string>
	<string name="buttonSetting">Setting</string>
	<string name="buttonSyncData">SyncData</string>
	<string name="buttonFingerprint">Fingerprint</string>
	<string name="buttonFingerprintFormat" formatted="false">FingerprintFormat</string>
	<string name="buttonDeviceFormat" formatted="false">DeviceFormat</string>
	<string name="buttonBack">Back</string>
	<string name="buttonAdd">Add</string>
	<string name="editTextSearch">Search</string>
	<string name="labelName">Name</string>
	<string name="labelEmployeeIdC">EmployeeIdC</string>
	<string name="labelTitle">Title</string>
	<string name="labelAction">Action</string>
	<string name="labelFingerprintCount">FingerprintCount</string>
	<string name="labelNfcCount">NfcCount</string>
	<string name="labelAccessDatetime">lastlAccessDatetime</string>
	<string name="actionEdit">Edit</string>
	<string name="actionDelete">Delete</string>
	<string name="actionPreviousParameter">PreviousParameter</string>
	<string name="actionCreate">Create</string>
	<string name="actionDefaultParameter">DefaultParameter</string>
	<string name="buttonSave">Save</string>
	<string name="buttonEdit">Edit</string>
	<string name="buttonNext">Next</string>
	<string name="labelBirthday">Birthday</string>
	<string name="labelGender">Gender</string>
	<string name="labelBloodType">BloodType</string>
	<string name="labelFingerprint">Fingerprint</string>
	<string name="buttonDelete">Delete</string>
	<string name="buttonFinger1L">Finger1L</string>
	<string name="buttonFinger1R">Finger1R</string>
	<string name="buttonFinger2L">Finger2L</string>
	<string name="buttonFinger2R">Finger2R</string>
	<string name="buttonFinger3L">Finger3L</string>
	<string name="buttonFinger3R">Finger3R</string>
	<string name="buttonFinger4L">Finger4L</string>
	<string name="buttonFinger4R">Finger4R</string>
	<string name="buttonFinger5L">Finger5L</string>
	<string name="buttonFinger5R">Finger5R</string>
	<string name="buttonClear">Clear</string>
	<string name="buttonAccessControl">AccessControl</string>
	<string name="buttonSyncServer">SyncServer</string>
	<string name="buttonDataMaintain">DataMaintain</string>
	<string name="buttonUserInOut">UserInOut</string>
	<string name="labelDatetime">Datetime</string>
	<string name="labelEvent">Event</string>
	<string name="labelOperator">Operator</string>
	<string name="labelDescription">Description</string>
	<string name="labelResult">Result</string>
	<string name="labelDeviceId">DeviceId</string>
	<string name="labelCompanyId">CompanyId</string>
	<string name="labelProduct">Product</string>
	<string name="labelUpdatedtime">lUpdatedtime</string>
	<string name="labelAddress">Address</string>
	<string name="labelCompany">Company</string>
	<string name="labelVersion">Version</string>
	<string name="labelSetting">Setting</string>
	<string name="labelPreviousParameter">s</string>
	<string name="labelAction1">還原操作</string>
	<string name="buttonUserInOut1">打卡設定</string>
	<string name="buttonSync">同步</string>
	<string name="buttonReload">重新載入</string>
	<string name="labelAction2">動作</string>
	<string name="labelClassName">資料表</string>
	<string name="labelJson">資料內容</string>
	<string name="labelState">結果</string>
	<string name="no_connected">(未連接)</string>
	<string name="connected">(已連接)</string>
	<string name="error_network_unavailable">無網絡連線</string>
	<string name="error_webservice_WsAnnouncementR" formatted="false">取得 announcements 失敗, %s</string>
	<string name="error_webservice_WsReminderR" formatted="false">取得 reminders 失敗, %s</string>
	<string name="error_webservice_WsHumanR1" formatted="false">取得 human 失敗, %s</string>
	<string name="error_webservice_WsHumanR2" formatted="false">取得指定的 human 失敗, %s</string>
	<string name="error_webservice_WsHumanU" formatted="false">更新指定的 human 失敗, %s</string>
	<string name="error_webservice_WsHumanC" formatted="false">建立指定的 human 失敗, %s</string>
	<string name="error_webservice_WsHumanD" formatted="false">刪除指定的 human 失敗, %s</string>
	<string name="error_webservice_WsNfcD">刪除指定的 nfc card 失敗, %s</string>
	<string name="error_webservice_WsNfcR">取得指定的 nfc card 失敗, %s</string>
	<string name="error_webservice_WsNfcC">建立指定的 nfc card 失敗, %s</string>
	<string name="error_webservice_WsFingerprintD">刪除指定的 fingerprint 失敗, %s</string>
	<string name="error_webservice_WsFingerprintR">取得指定的 fingerprint 失敗, %s</string>
	<string name="error_webservice_WsFingerprintC">建立指定的 fingerprint 失敗, %s</string>
	<string name="error_webservice_WsApDeviceC" formatted="false">建立指定的 ApDevice 失敗, %s</string>
	<string name="error_webservice_WsApDeviceR1" formatted="false">取得 ApDevice 失敗, %s</string>
	<string name="error_webservice_WsApDeviceR2" formatted="false">取得指定的 ApDevice 失敗, %s</string>
	<string name="error_webservice_WsApDeviceU" formatted="false">更新指定的 ApDevice 失敗, %s</string>
	<string name="error_webservice_WsApDeviceD" formatted="false">刪除指定的 ApDevice 失敗, %s</string>
	<string name="error_webservice_WsFingerprintDeviceC" formatted="false">建立指定的 FingerprintDevice 失敗, %s</string>
	<string name="error_webservice_WsFingerprintDeviceR" formatted="false">取得指定的 FingerprintDevice 失敗, %s</string>
	<string name="error_webservice_WsFingerprintDeviceU" formatted="false">更新指定的 FingerprintDevice 失敗, %s</string>
	<string name="error_webservice_WsFingerprintDeviceD" formatted="false">刪除指定的 FingerprintDevice 失敗, %s</string>
	<string name="error_webservice_WsMatchLogRi">建立指紋資料記錄(Ri)失敗，原因：%s</string>
	<string name="error_webservice_WsMatchLogRv">建立指紋資料記錄(Rv)失敗，原因：%s</string>
	<string name="error_input_required" formatted="false">%s不能為空字串</string>
	<string name="error_employeeid_limit" formatted="false">%s必為 %d 碼數字</string>
	<string name="error_no_nfc">至少需要一筆悠遊卡資料</string>
	<string name="error_no_fingerprint">至少需要一筆指紋資料</string>
	<string name="ok">確定</string>
	<string name="canel">取消</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	<string name="warn_title_no_manager_data">無任何管理者資料</string>
	<string name="warn_content_no_manager_data">請先新增管理者</string>
	<string name="warn_title_no_user_data">無任何使用者資料</string>
	<string name="warn_content_no_user_data">請先新增使用者</string>
	<string name="warn_title_need_sync_data">尚未執行資料同步</string>
	<string name="warn_content_no_need_sync_data">是否暫時忽略同步作業</string>
	<string name="warn_title_exit">離開應用程式</string>
	<string name="warn_content_exit">是否確定離開應用程式</string>
	<string name="info_title_no_need_sync_data">同步資料</string>
	<string name="info_content_no_need_sync_data">無需同步任何資料</string>
	<string name="warn_title_delete_user">刪除使用者</string>
	<string name="warn_content_delete_user" formatted="false">是否確定刪除使用者(%s)</string>
	<string name="warn_title_delete_nfc">刪除悠遊卡</string>
	<string name="warn_content_delete_nfc">是否確定刪除悠遊卡(%s)</string>
	<string name="warn_title_ignore_create_user">新增使用者</string>
	<string name="warn_title_ignore_update_user">編輯使用者</string>
	<string name="warn_content_ignore_create_user">尚未儲存使用者，是否確定離開</string>
	<string name="warn_title_delete_runninglogs">刪除運行記錄</string>
	<string name="warn_content_delete_runninglogs">是否刪除運行記錄</string>
	<string name="warn_title_save_setting">儲存設定</string>
	<string name="warn_content_save_setting">是否儲存設定</string>
	<string name="warn_title_ignore_create_fingerprint">編輯指紋</string>
	<string name="warn_content_ignore_create_fingerprint">尚未儲存指紋資料，是否確定離開</string>
	<string name="buttonNextUser">下一位</string>
	<string name="male">male</string>
	<string name="female">female</string>
	<string name="editor_title_prefix">請輸入</string>
	<string name="textViewAddNfc">請將悠遊卡靠近手機裝置</string>
	<string name="labelNfc">門禁卡</string>
	<string name="error_nfc_has_been_used_byself" formatted="false">您已經註冊此張悠遊卡(%s)</string>
	<string name="error_nfc_has_been_used_other" formatted="false">悠遊卡(%s)已經被使用者(%s)註冊</string>
	<string name="error_nfc_count_limit" formatted="false">可註冊悠遊卡已達最大張數(%d張)</string>
	<string name="error_duplicate_bind_id" formatted="false">輸入工號%s已被使用者%s所使用</string>
	<string name="buttonSacn">掃描</string>
	<string name="sensor_is_not_connected">尚未連接指紋機</string>
	<string name="sensor_please_press">請按壓指紋機</string>
	<string name="sensor_capture_start">開始擷取指紋</string>
	<string name="sensor_capture_finish">完成擷取指紋</string>
	<string name="sensor_remove_finger">請將手指從指紋機上移開</string>
	<string name="sensor_enroll_success">指紋註冊成功</string>
	<string name="sensor_enroll_failure" formatted="false">指紋註冊失敗，原因：%s</string>
	<string name="sensor_enroll_low_quality">掃描品質過差</string>
	<string name="sensor_enroll_not_complete">註冊動作尚未完成</string>
	<string name="sensor_invalid_input_handle">無效的 Input Handle</string>
	<string name="sensor_capture_timeout">掃描作業逾時</string>
	<string name="sensor_stop_immediately">立即停止掃描作業</string>
	<string name="sensor_verify_success">指紋驗證成功</string>
	<string name="sensor_verify_failure">指紋驗證失敗</string>
	<string name="sensor_verify_success_detail" formatted="false">指紋驗證成功，原因：分數大於等於下限(%d &gt;= %d)</string>
	<string name="sensor_verify_failure_detail" formatted="false">指紋驗證失敗，原因：分數低於驗證下限(%d &lt; %d)</string>
	<string name="sensor_verify_failure_no_dat_file">查無指紋資料</string>
	<string name="sensor_in_used">正在進行驗證程序，請稍後</string>
	<string name="actionCreate1">新增</string>
	<string name="actionUpdate">更新</string>
	<string name="textViewFingerprint">Fingerprint\nWaiting</string>
	<string name="textViewFingerprintWithCountDown" formatted="false">Fingerprint Waiting (%d)</string>
	<string name="no_fingerprint_sensor">目前無指紋機可用</string>
	<string name="sensor_enrolling">請等待掃描指紋結束</string>
	<string name="no_human_found">找不到對應使用者資訊</string>
	<string name="sensor_verify_start">開始進行使用者驗證</string>
	<string name="result_success">成功</string>
	<string name="result_failure">失敗</string>
	<string name="runninglog_event_verification">登入驗證</string>
	<string name="runninglog.description.verification">登入驗證</string>
	<string name="runninglog_event_createHuman.remote">建立遠端使用者</string>
	<string name="runninglog_event_createHuman.local">建立本機使用者</string>
	<string name="runninglog_event_updateHuman.remote">更新遠端使用者</string>
	<string name="runninglog_event_updateHuman.local">更新本機使用者</string>
	<string name="runninglog_event_deleteHuman.remote">刪除遠端使用者</string>
</resources>