<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_2x"
    android:background="@drawable/background"
    tools:context="com.startek.biota.app.fragments.LoggingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/margin_2x">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:src="@drawable/logo"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                style="@style/image_button"/>

            <ImageView
                android:id="@+id/buttonBack"
                android:src="@drawable/button_back"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                style="@style/image_button"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingRight="@dimen/margin_2x"
            android:paddingLeft="@dimen/margin_2x"
            android:paddingBottom="@dimen/margin_2x">

            <EditText
                android:id="@+id/editTextSearch"
                android:width="0dp"
                android:layout_weight="1"
                android:hint="@string/editTextSearch"
                android:textColorHint="@android:color/transparent"
                style="@style/navigation_edittext" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/textinputborder"
                android:src="@drawable/icon_search" />

            <Button
                android:id="@+id/buttonClear"
                android:text="@string/buttonClear"
                style="@style/navigation_button_green" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_1x">

                <!--ListView標頭-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/labelDatetime"
                        android:text="@string/labelDatetime"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/listview_header" />

                    <TextView
                        android:id="@+id/labelEvent"
                        android:text="@string/labelEvent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/listview_header" />

                    <TextView
                        android:id="@+id/labelOperator"
                        android:text="@string/labelOperator"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/listview_header" />

                    <TextView
                        android:id="@+id/labelDescription"
                        android:text="@string/labelDescription"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/listview_header" />

                    <TextView
                        android:id="@+id/labelResult"
                        android:text="@string/labelResult"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/listview_header" />

                </LinearLayout>

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/listview_item"></ListView>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_1x">

                <Button
                    android:id="@+id/buttonUserInOut"
                    android:text="@string/buttonUserInOut"
                    style="@style/toggle_button_small" />

                <Button
                    android:id="@+id/buttonDataMaintain"
                    android:text="@string/buttonDataMaintain"
                    style="@style/toggle_button_small" />

                <Button
                    android:id="@+id/buttonSyncServer"
                    android:text="@string/buttonSyncServer"
                    style="@style/toggle_button_small" />

                <Button
                    android:id="@+id/buttonAccessControl"
                    android:text="@string/buttonAccessControl"
                    style="@style/toggle_button_small" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
