<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelAnnouncement"
        android:text="@string/label_announcement"
        style="@style/announcement_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/gap_1x"
        android:background="@color/colorSplitterAnnouncement"></View>

    <!--ListView標頭-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headerAnnouncement1"
            android:text="@string/header_announcement_1"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_marginRight="@dimen/gap_1x"
            style="@style/announcement_listview_header" />

        <TextView
            android:id="@+id/headerAnnouncement2"
            android:text="@string/header_announcement_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/gap_1x"
            style="@style/announcement_listview_header" />

        <TextView
            android:id="@+id/headerAnnouncement3"
            android:text="@string/header_announcement_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/announcement_listview_header" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewAnnouncement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@color/colorDivider"
        android:dividerHeight="1dp"

        android:paddingBottom="@dimen/margin_2x"
        android:layout_weight="1"></ListView>

</LinearLayout>